Inclusão da tela de movimentos

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
+    "@mdi/font": "^7.1.96",
     "@popperjs/core": "^2.11.6",
     "core-js": "^3.8.3",
     "firebase": "^9.15.0",
+    "v-mask": "^2.3.0",
     "vue": "^2.7.14",
     "vue-router": "^3.5.1"
   },
