--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "core-js": "^3.8.3",
     "firebase": "^9.15.0",
     "v-mask": "^2.3.0",
+    "v-money": "^0.8.1",
     "vue": "^2.7.14",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
